<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/erer"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.example.sumit.olympics.RegisterActivity">


    <ImageView
        android:layout_width="217dp"
        android:layout_height="127dp"
        android:layout_marginTop="30dp"
         />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:textColor="#4a44ff"
        android:paddingLeft="2dp"



        android:hint="@string/username" />


    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:textColor="#4a44ff"

        android:hint="@string/password" />


    <EditText
        android:id="@+id/edittext_onf_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="#ffffff"
        android:textColor="#4a44ff"

        android:hint="@string/confirm_password" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="#6bff40"
        android:text="@string/register" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textSize="20dp"
            android:text="@string/already_registered"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="30dp"
            android:text="@string/login"
            android:textColor="#6bff8b"
            android:textSize="20dp"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>