<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sumit.olympics.MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/mit">



    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="190dp"
        android:background="#ffffff"
        android:textColor="#4a44ff"
        android:paddingLeft="2dp"


        android:hint="@string/username" />



    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="#ffffff"
        android:textColor="#4a44ff"

        android:hint="@string/password" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:background="#6bff40"
        android:textColor="#ffffff"
        android:textSize="18dp"
        android:text="@string/login" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textSize="20dp"
            android:text="@string/not_registered"
            android:textColor="#ffffff"/>

        <TextView
            android:id="@+id/textview_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="30dp"
            android:textSize="20dp"
            android:text="@string/register"
            android:textColor="#6bff8b"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>